--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 </head>
 <body>
     <h1>만 나이 계산기</h1>
+    <h2>여러분의 생년원일을 입력하고 만 나이를 알아가세요!!</h2>
     <label for="birthdate">생년월일 (예: 1990-01-01): </label>
     <input type="text" id="birthdate" placeholder="YYYY-MM-DD" required>
     <button onclick="calculateAge()">계산</button>
